--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -3,7 +3,7 @@ gsl {
 }
 
 akka {
-  loglevel = "INFO"
+  loglevel = "DEBUG"
 
   persistence {
     journal {
@@ -12,5 +12,9 @@ akka {
     }
 
     snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+  }
+
+  actor {
+    warn-about-java-serializer-usage = off
   }
 }
